fix pom и подготовка к отладке